[package]
name = "buckingham"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Arithmetic with units"
repository = "https://github.com/TheodoreEhrenborg/buckingham"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
